--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -13,6 +13,15 @@
   gather_facts: true
 
   roles:
+    - role: caddy_stack
+  tags: caddy
+
+- hosts: market
+  any_errors_fatal: true
+  become: true
+  gather_facts: true
+
+  roles:
     - role: market_stack
   tags: market
 
