--- a/roles/caddy_stack/tasks/main.yml
+++ b/roles/caddy_stack/tasks/main.yml
@@ -1,25 +1,25 @@
-- name: "Copy required for app stack objs"
+- name: "Copy required for caddy stack objs"
   ansible.builtin.copy:
     src: "{{ playbook_dir }}/../files/{{ item }}"
     dest: "{{ INSTALL_DIR }}"
     mode: "0644"
   with_items:
-    - "{{ SESSIONS_DIR }}"
-    - "{{ KEYS_DIR }}"
+    - "{{ CADDY_DIR }}"
+    - "{{ CERTS_DIR }}"
 
 - name: "Template docker compose file"
   ansible.builtin.template:
-    src: "3d-stack.yml.j2"
-    dest: "{{ INSTALL_DIR }}/3d-stack.yml"
+    src: "3d-caddy-stack.yml.j2"
+    dest: "{{ INSTALL_DIR }}/3d-caddy-stack.yml"
     mode: "0644"
   run_once: true
 
 - name: "Deploy stack from a compose file"
   docker_stack:
     state: present
-    name: 3d-app
+    name: 3d-caddy
     with_registry_auth: true
     compose:
-      - "{{ INSTALL_DIR }}/3d-stack.yml"
+      - "{{ INSTALL_DIR }}/3d-caddy-stack.yml"
   run_once: true
 
