--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -22,6 +22,15 @@
   gather_facts: true
 
   roles:
+    - role: s3_stack
+  tags: s3
+
+- hosts: market
+  any_errors_fatal: true
+  become: true
+  gather_facts: true
+
+  roles:
     - role: market_stack
   tags: market
 
