--- a/roles/caddy_stack/tasks/main.yml
+++ b/roles/caddy_stack/tasks/main.yml
@@ -3,18 +3,19 @@
     src: "{{ playbook_dir }}/../files/{{ item }}"
     dest: "{{ INSTALL_DIR }}"
     mode: "0644"
+  run_once: true
   with_items:
     - "{{ CADDY_DIR }}"
     - "{{ CERTS_DIR }}"
 
-- name: "Template docker compose file"
+- name: "Template docker compose caddy file"
   ansible.builtin.template:
     src: "3d-caddy-stack.yml.j2"
     dest: "{{ INSTALL_DIR }}/3d-caddy-stack.yml"
     mode: "0644"
   run_once: true
 
-- name: "Deploy stack from a compose file"
+- name: "Deploy caddy stack from a compose file"
   docker_stack:
     state: present
     name: 3d-caddy
