--- a/roles/market_stack/tasks/prepare.yml
+++ b/roles/market_stack/tasks/prepare.yml
@@ -3,5 +3,6 @@
     path: "{{ item }}"
     state: directory
     mode: "0644"
+  run_once: true # you can change with condition inventory_hostname  == groups['market'][0]
   with_items:
     - "{{ INSTALL_DIR }}"
