--- a/roles/docker/tasks/network.yml
+++ b/roles/docker/tasks/network.yml
@@ -1,10 +1,10 @@
 - name: "Create default swarm network"
-  docker_network:
+  community.docker.docker_network:
     name: "{{ SWARM_NETWORK_NAME }}"
     attachable: false
     driver: overlay
-    internal: yes
-    state: absent
+    internal: no
+    state: present
     driver_options:
       encrypted: ""
   when: RECREATE_STACK | default(false)
