--- a/roles/market_stack/defaults/main.yml
+++ b/roles/market_stack/defaults/main.yml
@@ -8,6 +8,7 @@ BACK_PORT: 8081
 
 BACK_MAX_PARTICIPANT_IMAGES: 1
 BACK_MAX_PRODUCT_IMAGES: 4
+BACK_PRODUCT_EXPIRATION_DAYS: 30
 BACK_PRIVATE_PATH: "/backend/keys"
 BACK_PRIVATE_KEY_PATH: "{{ BACK_PRIVATE_PATH }}/private.pk8"
 BACK_PUBLIC_KEY_PATH: "{{ BACK_PRIVATE_PATH }}/public.key"
